fixing overflow issue

--- a/default.css
+++ b/default.css
@@ -59,16 +59,17 @@ h6 { font-size: 16px;}
 
 
 .s1{
-	display: block;
+	/* display: block; */
 	background-color: var(--mainColor);
 	border-bottom:1px solid var(--borderColor);
 	/* overflow: -moz-hidden-unscrollable; */
+	height: 100vh;
 	overflow: auto;
 	
 }
 
 .s2{
-	display: block;
+	/* display: block; */
 	background-color: var(--secondaryColor);
 	border-bottom:1px solid var(--borderColor);
 	/* overflow:hidden; */
@@ -84,14 +85,14 @@ h6 { font-size: 16px;}
 	margin-bottom: 5px;
 }
 
-
+/* 
 .greeting-wrapper{
 	display: grid;
 	text-align: center;
 	align-content: center;
 	min-height: 10em;
 
-}
+} */
 
 .intro-wrapper{
 	background-color: var(--secondaryColor);
